# qlisp

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  TODO  main.cpp
examples/: basic.lisp  bools.lisp  case.lisp  eval.lisp  fib.lisp  hash_tables.lisp  if.lisp  import.lisp  input.lisp  lambdas.lisp  let.lisp  lists.lisp  modules.lisp  recursion.lisp  string.lisp  stuff.lisp  test.lisp  test_memory.lisp  timeit.lisp  util-functions.lisp  variadic_args.lisp
examples/out_test/: basic.lisp.out  case.lisp.out  fib.lisp.out  if.lisp.out  lambdas.lisp.out  lists.lisp.out  variadic_args.lisp.out
platform/: linux.cpp  platform.hpp
scripts/: build-debug.sh  build-release.sh  run-tests.sh
src/: errors.hpp  interpreter.cpp  interpreter.hpp  main.cpp  objects.cpp  objects.hpp  types.hpp  util.cpp  util.hpp
src/platform/: linux.cpp  win32.cpp
stdlib/: basic.lisp
test/: test.py
